--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Subscription files.</p>
 removed subscriptions from the Swift Playground app. I will continue to
 host mine for anyone still using a previous version :)</p>
 <p><a
-href="https://developer.apple.com/ul/sp0?url=https://www.playgrounds.bertant.dev/sub/feed.json">Click
+href="https://developer.apple.com/ul/sp0?url=https://playgrounds.bertant.dev/sub/feed.json">Click
 here to subscribe on iPad!</a></p>
 <p><strong>Or if you are using a Mac:</strong></p>
 <ul>
@@ -29,8 +29,8 @@ corner to view the Playground gallery.</li>
 "Subscribe".</li>
 </ul>
 <p><strong>Subscription URL:</strong> <a
-href="https://www.playgrounds.bertant.dev/sub/feed.json"
-class="uri">https://www.playgrounds.bertant.dev/sub/feed.json</a></p>
+href="https://playgrounds.bertant.dev/sub/feed.json"
+class="uri">https://playgrounds.bertant.dev/sub/feed.json</a></p>
 <p><a href="https://github.com/bertant">You can check out my Gitub
 profile and discover all of my projects!</a></p>
 <h5>Made with ❤️ and passion. Copyright (C) 2025 Mehmet Bertan
